--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apothi-backend",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "Apothi - Application Distribution Platform Backend",
   "main": "server.js",
   "scripts": {
@@ -15,7 +15,8 @@
     "bcrypt": "^5.1.1",
     "multer": "^1.4.5-lts.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "sharp": "^0.33.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
